tests/supertype_subtype/supertype_subtype.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:9

Deprecated utility. Using `$Subtype` types is not recommended! [deprecated-utility]

   3| let y : $Subtype<number> = 3;
              ^^^^^^^^^^^^^^^^



Found 1 error
